# curlrs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
include/: rsurl.h
src/: compress.rs  cookie.rs  dict.rs  error.rs  ffi.rs  file.rs  ftp.rs  gopher.rs  http.rs  http2.rs  http3.rs  imap.rs  ldap.rs  lib.rs  mqtt.rs  pop3.rs  rtsp.rs  ssh.rs  tftp.rs  tls.rs  transfer.rs  url.rs  websocket.rs
src/tls/: common.rs  mod.rs  pc_roots.rs  purecrypto.rs  rustls.rs
tests/: ffi_smoke.c  integration_http.rs  integration_url.rs
tests/common/: mod.rs
